--- a/index.ipynb
+++ b/index.ipynb
@@ -59,8 +59,10 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def three_x_y_at_one(x):\n",
-    "    pass\n",
+    "    return \n",
     "\n",
     "def three_x_y_at_three(x):\n",
     "    pass\n",
@@ -948,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
