--- a/index.ipynb
+++ b/index.ipynb
@@ -62,10 +62,10 @@
     "\n",
     "\n",
     "def three_x_y_at_one(x):\n",
-    "     \n",
+    "    return 3*1 \n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    pass\n",
+    "    \n",
     "\n",
     "def three_x_y_at_six(x):\n",
     "    pass\n",
