--- a/index.ipynb
+++ b/index.ipynb
@@ -62,10 +62,10 @@
     "\n",
     "\n",
     "def three_x_y_at_one(x):\n",
-    "    return 3*1*y \n",
+    "    return 3*1*x \n",
     "\n",
     "def three_x_y_at_three(x):\n",
-    "    return \n",
+    "    rwturn \n",
     "\n",
     "def three_x_y_at_six(x):\n",
     "    pass\n",
