--- a/index.ipynb
+++ b/index.ipynb
@@ -91,8 +91,8 @@
    "source": [
     "three_x_y_at_one(3) # 9\n",
     "three_x_y_at_three(3)# 27\n",
-    " # 18\n",
-    " # 36"
+    "three_x_y_at_six(1) # 18\n",
+    "three_x_y_at_six(2) # 36"
    ]
   },
   {
