--- a/index.ipynb
+++ b/index.ipynb
@@ -104,17 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "zero_to_ten = list(range(0, 11))\n",
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return \n",
+    "    return three_x_y_at_one(x_values)\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
     "    pass\n",
@@ -128,10 +126,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_values_for_at_one(zero_to_four) # [0, 3, 6, 9, 12]\n",
